[gd_scene load_steps=11 format=3 uid="uid://bsdf2sbkj7k38"]

[ext_resource type="Shader" uid="uid://wqtjpvgabkbc" path="res://Shaders/scroll.gdshader" id="1_48xlc"]
[ext_resource type="Script" uid="uid://doe670j88atfa" path="res://Scripts/main_menu.gd" id="1_opfnp"]
[ext_resource type="Texture2D" uid="uid://dgemud1coyr7s" path="res://Assets/Backgrounds/Yellow.png" id="2_1ehe0"]
[ext_resource type="Texture2D" uid="uid://dwp4ulesrhgty" path="res://Assets/Buttons/Settings.png" id="3_n45e2"]
[ext_resource type="Texture2D" uid="uid://col1nxpfbiobb" path="res://Assets/Buttons/Play.png" id="4_opfnp"]
[ext_resource type="Texture2D" uid="uid://2qhmrpjy62ih" path="res://Assets/Buttons/Leaderboard.png" id="5_cp0ys"]
[ext_resource type="Texture2D" uid="uid://ctmbiihhu3y7q" path="res://Assets/Logo/Logo.png" id="7_cp0ys"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ce3w2"]
shader = ExtResource("1_48xlc")
shader_parameter/speed = 0.5
shader_parameter/x_movement = true
shader_parameter/y_movement = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n45e2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opfnp"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opfnp")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ce3w2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1ehe0")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -123.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Settings" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_n45e2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_opfnp")
icon = ExtResource("3_n45e2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Play" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_n45e2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_opfnp")
icon = ExtResource("4_opfnp")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Back" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_n45e2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_opfnp")
icon = ExtResource("5_cp0ys")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078125
anchor_top = 0.277778
anchor_right = 0.078125
anchor_bottom = 0.277778
offset_left = -8.0
offset_top = -8.00001
offset_right = 2217.0
offset_bottom = 415.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_cp0ys")

[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_back_pressed"]
